# HELIX

./: .gitattributes  .gitignore  HANDOFF.md  MIGRATION.md  README.md  RUNBOOK.md  helix.py
.pgf/: COMPLETENESS-HELIX.md  DESIGN-ActionHandbackVerifier.md  DESIGN-ArticleGate.md  DESIGN-AttestraImplementationPatchPlan.md  DESIGN-AuthorityArbiter.md  DESIGN-ConcordGate.md  DESIGN-Confluence.md  DESIGN-ContractRelay.md  DESIGN-DriftIsolator.md  DESIGN-FidelityAttestation.md  DESIGN-GraphQuarantine.md  DESIGN-HELIX-MONOREPO.md  DESIGN-HELIX.md  DESIGN-HELIXCorpusPhase3.md  DESIGN-HELIXCorpusPhase4.md  DESIGN-HELIXCorpusPilot.md  DESIGN-HELIXCorpusSupply-Admission.md  DESIGN-HELIXCorpusSupply-Contracts.md  DESIGN-HELIXCorpusSupply-Operations.md  DESIGN-HELIXCorpusSupply.md  DESIGN-HELIXDirection.md  DESIGN-HELIXForwardClosure.md  DESIGN-HELIXInternalControlPlane.md  DESIGN-HookCircuit.md  DESIGN-LoopShield.md  DESIGN-Meander.md  DESIGN-MethodBond.md  DESIGN-OwnedStakes.md  DESIGN-Phase4AttestraPackLane.md  DESIGN-Phase4CloseoutReport.md  DESIGN-Phase4CommitPushClosure.md  DESIGN-Phase4FinalRuntimeHandoff.md  DESIGN-PilotProvenanceBoundary.md  DESIGN-PilotSim.md  DESIGN-PolicyDriftGate.md  DESIGN-ProofEscrow.md  DESIGN-ProvenanceStage.md  DESIGN-PublicNarrativeDocsPhase4Sync.md  DESIGN-RoutestraContractRelayPackLane.md  DESIGN-SlotSettleGate.md  (+98 more)
.pgxf/: INDEX-HELIXCorpusSupply.json
ActionHandbackVerifier/: README.md  __init__.py  pyproject.toml  verifier.py
ActionHandbackVerifier/examples/: breach.json  ledger.jsonl  thin.json  valid.json  valid.report.md
ActionHandbackVerifier/src/ActionHandbackVerifier/: cli.py  ledger.py  samples.py
ActionHandbackVerifier/tests/: __init__.py  test_action_handback_verifier.py
AuthorityArbiter/: .gitignore  LICENSE  README.md  pyproject.toml
BioClock/: README.md  __init__.py  cli.py  core.py  pyproject.toml  samples.py
BioClock/tests/: __init__.py  test_bioclock.py
ConcordGate/: .gitignore  README.md  concordgate.py
Confluence/: .gitignore  README.md  confluence.py
ContractRelay/: .gitignore  LICENSE  README.md  pyproject.toml
ContractRelay/examples/: blocked-case.json  invalid-baseline-case.json  relayed-case.json
ContractRelay/src/contractrelay/: __init__.py  cli.py  core.py  ledger.py  samples.py
ContractRelay/tests/: test_contractrelay.py
CryoFutures/: LICENSE  README.md  cli.py  pyproject.toml
CryoFutures/src/CryoFutures/: __init__.py  core.py  samples.py
CryoFutures/tests/: __init__.py  test_cryofutures.py
DriftIsolator/: LICENSE  README.md  pyproject.toml
GraphQuarantine/: README.md  pyproject.toml
GraphQuarantine/examples/: clear-case.json  invalid-baseline-case.json  quarantined-case.json
GraphQuarantine/src/graphquarantine/: __init__.py  cli.py  core.py  ledger.py  samples.py
GraphQuarantine/tests/: test_graphquarantine.py
HookCircuit/: README.md  pyproject.toml
HookCircuit/examples/: clean-case.json  invalid-baseline-case.json  tripped-case.json
HookCircuit/src/hookcircuit/: __init__.py  cli.py  core.py  ledger.py  samples.py
HookCircuit/tests/: test_hookcircuit.py
Meander/: .gitignore  README.md  meander.py
MineralShock/: README.md  __init__.py  cli.py  core.py  pyproject.toml  samples.py
MineralShock/tests/: __init__.py  test_mineralshock.py
ProofEscrow/: README.md  pyproject.toml
ProofEscrow/examples/: held-behavior-request.json  held-signature-request.json  released-request.json  trust-store.json
ProofEscrow/src/proofescrow/: __init__.py  canonical.py  cli.py  engine.py  ledger.py  samples.py
ProofEscrow/tests/: test_proofescrow.py
SkyGrid/: LICENSE  README.md  __init__.py  cli.py  core.py  pyproject.toml
SkyGrid/src/SkyGrid/: samples.py
SkyGrid/tests/: __init__.py  test_skygrid.py
SoilBond/: LICENSE  README.md  __init__.py  cli.py  core.py  pyproject.toml  samples.py
SoilBond/tests/: __init__.py  test_soilbond.py
Trellis/: .gitignore  README.md  trellis.py
_legacy/: HANDOFF-CONDENSE-v0.6-COMPLETE.md  HANDOFF-HELIXDirection-COMPLETE.md  HANDOFF-HELIXDirection.md
_workspace/: PGF-HELIX-system-analysis-2026-06-17.md  ex_runbook.md
core/: __init__.py  helix_actuator.py  helix_admission.py  helix_adoption_trial.py  helix_anchor.py  helix_authorization.py  helix_condense.py  helix_condense_acceptance.py  helix_constitution.py  helix_contestability.py  helix_corpus_supply.py  helix_diversity.py  helix_evidence.py  helix_execution_plan.py  helix_fidelity.py  helix_fingerprint.py  helix_holdout.py  helix_impact_handback.py  helix_internal_metrics.py  helix_io.py  helix_ledger.py  helix_loop.py  helix_loop_state.py  helix_machine_probes.py  helix_novelty.py  helix_oracle_grounding.py  helix_owned_stakes.py  helix_platform_composition.py  helix_prediction.py  helix_project_paths.py  helix_provenance.py  helix_provisioning.py  helix_risk_policy.py  helix_router.py  helix_schema.py  helix_side_effect_guard.py  helix_signing.py  helix_state_receipt.py  helix_stop_token.py  helix_t4.py  (+4 more)
docs/: ARCHITECTURE.md  CALIBRATION.md  CONDENSE.md  CORPUS-SUPPLY.md  DESIGN-HELIX-UNIFIED-PIPELINE.pg.md  HOLDOUT-POLICY.md  INSTRUCTIONS-helix-fullcycle.md  INSTRUCTIONS-helix-loop-autonomous.md  MACHINE-GRAPH.md  OVERVIEW.md  PARITY-PROVENANCE-WORKPLAN.md  PARITY-PROVENANCE.md  PHASE3-OUTCOME.md  PILOT-KICKOFF.md  PILOT-PROTOCOL.md  PILOT-STATUS.md  SUBSTRATE-CONTRACT.md  WEDGE-OPERATIONS.md  WEDGE-RUNBOOK.md
engines/: loaders.py  transaction_store.py  unify.py
examples/: consumed_ledger.json  loop_round.md
schemas/: action-intent.schema.json  corpus-admission-receipt.schema.json  corpus-entry.schema.json  corpus-manifest.schema.json  corpus-phase3-registry.schema.json  corpus-pilot-registry.schema.json  corpus-review-receipt.schema.json  diversity-report.schema.json  evidence-manifest.schema.json  evidence-registry.schema.json  gate-result.schema.json  helix-holdout-registry.schema.json  helix-reduction-receipt.schema.json  helix-state-receipt.schema.json  helix-transaction.schema.json  helix-trial-receipt.schema.json  impact-handback.schema.json  ledger.schema.json  (+6 more)
(+920 files in other folders)
