[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "action-handback-verifier"
version = "1.1.0"
description = "Verify whether a delegated autonomous action was handed back with authority, custody, route, rollback, and public trace evidence intact."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jung Wook Yang" }]
keywords = ["audit", "delegation", "handback", "verifier", "ledger", "deterministic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
action-handback-verifier = "ActionHandbackVerifier.cli:main"

[tool.setuptools]
packages = ["ActionHandbackVerifier", "ActionHandbackVerifier.tests"]
