[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bio-clock"
version = "0.1.0"
description = "Bio / medical verification layer that certifies a biological clock from clinical evidence drift and quarantine staging."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jung Wook Yang" }]
keywords = ["bio", "medical", "drift", "quarantine", "certification", "deterministic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
bio-clock = "BioClock.cli:main"

[tool.setuptools]
packages = ["BioClock", "BioClock.tests"]
