[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contractrelay"
version = "0.1.0"
description = "Deterministic fail-closed federated contract relay."
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
contractrelay = "contractrelay.cli:main"

