[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cryo-futures"
version = "0.1.0"
description = "Quantum cooling capacity futures exchange — price and settle failure-protection contracts for fragile cold-capacity assets."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jung Wook Yang" }]
keywords = ["quantum", "cooling", "futures", "derivatives", "energy", "market", "deterministic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
cryo-futures = "CryoFutures.cli:main"

[tool.setuptools]
packages = ["CryoFutures", "CryoFutures.tests"]
