[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphquarantine"
version = "0.1.0"
description = "Deterministic path-aware evidence quarantine."
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
graphquarantine = "graphquarantine.cli:main"

