[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hookcircuit"
version = "0.1.0"
description = "Deterministic reflex circuit breaker for plugin hooks."
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
hookcircuit = "hookcircuit.cli:main"

