[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proofescrow"
version = "0.1.0"
description = "Evidence-bound AI artifact release escrow"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
proofescrow = "proofescrow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
