[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soil-bond"
version = "0.1.0"
description = "Soil-carbon reduction matching pool — score parcels by carbon density and climate resilience, then allocate a quadratic-funding pool."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jung Wook Yang" }]
keywords = ["soil", "carbon", "quadratic-funding", "agriculture", "climate", "matching-pool", "resilience"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
soil-bond = "SoilBond.cli:main"

[tool.setuptools]
packages = ["SoilBond", "SoilBond.tests"]
